--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Simples</title>
-    <
+    <style>
+        /*Definição do estilo da página*/
+        body{
+            font-family: Arial, Helvetica, sans-serif;/*Definiar a fonte do texto*/
+            text-align: center;/*Centralizar o texto na página*/
+            margin: 50px; /*Definir uma margem ao redor do conteúdo*/
+            background-color: #f4f4f4;/*Definir a cor do fundo padrão*/
+            
+        }
+
+
+    </style>
+
 </head>
+
 <body>
    <!--Titulo principal da página-->
    <h1>Bem-vindos ao meu site simples</h1> 
