--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
             text-align: center;/*Centralizar o texto na página*/
             margin: 50px; /*Definir uma margem ao redor do conteúdo*/
             background-color: #f4f4f4;/*Definir a cor do fundo padrão*/
-            
+
         }
+        /*Estilizar o botão*/
+        button}
+           padding: 10px 20px;/*Definir o tamanho botão*/
+           font-size: 16px;/*Define o tamanho da fonte do botão*/
+           cursor; pointer;/
 
 
     </style>
