--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         button}
            padding: 10px 20px;/*Definir o tamanho botão*/
            font-size: 16px;/*Define o tamanho da fonte do botão*/
-           cursor; pointer;/
+           cursor; pointer;/*Altera o cursor ao passar
+           
 
-
-    </style>
+  </style>
 
 </head>
 
