--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
    <!--Botão que mudará a cor de fundo da página-->
    <button onclick="mudarCor()">Mudar Cor de fundo</button>
    <script>
-    //Função JavaScritp para mudar a cor do fundo da página
-    function mudarCor() {
-        //Gera uma cor aleatória
+      //Função JavaScritp para mudar a cor do fundo da página
+      function mudarCor() {
+        //Gerar uma cor aleatória em formato hexadecimal
        var corAleatória= '#' + Math.floor(Match.random()*16777215).toString(16);
        // Aplica a nova cor ao fundo da página
        document.body.style.backgroundColor = corAleatória;
